Some fixes to compile script